# IIS

./: .gitignore  data.dvc  dvc.yaml  gx.dvc  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: dvc.yml  fetch_data.yml  test.yml
gx/: great_expectations.yml  run_checkpoint.py
models/: model_E403.keras  model_E404.keras  model_E405.keras  model_E407.keras  model_E408.keras  model_E409.keras  model_E410.keras  model_E411.keras  model_E412.keras  model_E413.keras  model_E414.keras  model_E415.keras  model_E417.keras  model_E418.keras  model_E420.keras  model_E421.keras  model_E423.keras  model_E801.keras  model_E802.keras  model_E803.keras  model_E804.keras  pipeline_E403.pkl  pipeline_E404.pkl  pipeline_E405.pkl  pipeline_E407.pkl  pipeline_E408.pkl  pipeline_E409.pkl  pipeline_E410.pkl  pipeline_E411.pkl  pipeline_E412.pkl  pipeline_E413.pkl  pipeline_E414.pkl  pipeline_E415.pkl  pipeline_E417.pkl  pipeline_E418.pkl  pipeline_E420.pkl  pipeline_E421.pkl  pipeline_E423.pkl  pipeline_E801.pkl  pipeline_E802.pkl  (+2 more)
notebooks/: air_quality_suite.json  air_quality_validation.ipynb
reports/: E403.csv_report.html  E404.csv_report.html  E405.csv_report.html  E407.csv_report.html  E408.csv_report.html  E409.csv_report.html  E410.csv_report.html  E411.csv_report.html  E412.csv_report.html  E413.csv_report.html  E414.csv_report.html  E415.csv_report.html  E417.csv_report.html  E418.csv_report.html  E420.csv_report.html  E421.csv_report.html  E423.csv_report.html  E801.csv_report.html  E802.csv_report.html  E803.csv_report.html  E804.csv_report.html
(+80 files in other folders)
